export interface Tag {
  id: number
  name: string
  article_id: string
  create_at: string
}