Table "users" {
  "id" uuid [pk, not null, note: '主键ID']
  "username" varchar [unique, not null, note: '用户名']
  "hashed_password" varchar [not null]
  "full_name" varchar [not null, note: '全名']
  "email" varchar [unique, not null, note: '邮箱']
  "is_email_verified" bool [not null, default: false, note: '邮箱是否验证']
  "about" varchar [not null, default: '', note: '介绍']
  "role" varchar [not null, default: 'visitor', note: 'admin 或 visitor']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']
  "updated_at" timestamptz [not null, default: '0001-01-01 00:00:00+00', note: '更新时间']
  "deleted_at" timestamptz [not null, default: '0001-01-01 00:00:00+00', note: '删除时间']

  Indexes {
    role [type: btree, name: "users_role_idx"]
    role [unique, type: btree, name: "users_single_admin_idx", note: "Partial index where role = 'admin'"]
  }

  Note: '用户表'
}

Table "articles" {
  "id" uuid [pk, not null, note: '主键ID']
  "title" varchar [not null, note: '标题']
  "summary" varchar [not null, default: '', note: '摘要']
  "content" text [not null, note: '内容']
  "views" int4 [not null, default: 0, note: '浏览量']
  "likes" int4 [not null, default: 0, note: '点赞数']
  "is_publish" bool [not null, default: false, note: '是否发布']
  "owner" uuid [not null, note: '拥有者']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']
  "updated_at" timestamptz [not null, default: '0001-01-01 00:00:00+00', note: '更新时间']
  "deleted_at" timestamptz [not null, default: '0001-01-01 00:00:00+00', note: '删除时间']
  "category_id" int8 [not null, default: 1, note: '分类ID']
  "slug" varchar(100) [unique, note: '短标识']
  "cover" varchar [not null, default: '', note: '封面']
  "last_updated" timestamptz [not null, default: `now()`, note: '最后更新时间']
  "check_outdated" bool [not null, default: true, note: '检查过时']
  "read_time" varchar(20) [not null, default: '', note: '阅读时间']

  Indexes {
    (is_publish, created_at) [type: btree, name: "articles_is_publish_created_at_idx"]
    (category_id, is_publish, created_at) [type: btree, name: "articles_category_id_is_publish_created_at_idx"]
    slug [unique, type: btree, name: "articles_slug_idx"]
  }

  Note: '文章表'
}

Table "categories" {
  "id" int8 [pk, not null, increment]
  "name" varchar [unique, not null, default: '', note: '分类名称']
  "is_system" bool [not null, default: false, note: '是否为系统分类']
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Note: '文章分类表'
}

Table "comments" {
  "id" int8 [pk, not null, increment, note: '主键ID']
  "content" varchar [not null, note: '评论内容']
  "article_id" uuid [not null, note: '文章ID']
  "parent_id" int8 [not null, default: 0, note: '父评论ID']
  "likes" int4 [not null, default: 0, note: '点赞数']
  "from_user_id" uuid [not null, note: '评论人ID']
  "to_user_id" uuid [not null, note: '被评论人ID']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']
  "deleted_at" timestamptz [not null, default: '0001-01-01 00:00:00+00', note: '删除时间']

  Note: '文章评论表'
}

Table "tags" {
  "id" int8 [pk, not null, increment, note: '主键ID']
  "name" varchar [not null, note: '名称']
  "article_id" uuid [not null, note: '文章ID']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']

  Note: '标签表'
}

Table "sessions" {
  "id" uuid [pk, not null, note: '主键ID']
  "user_id" uuid [not null, note: '用户ID']
  "refresh_token" varchar [not null, note: '刷新token']
  "user_agent" varchar [not null, note: '用户浏览器']
  "client_ip" varchar [not null, note: '用户IP']
  "is_blocked" bool [not null, default: false, note: '是否阻止登陆']
  "expires_at" timestamptz [not null, note: '到期时间']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']

  Note: '用户会话表'
}

Table "verify_emails" {
  "id" int8 [pk, not null, increment, note: '主键ID']
  "user_id" uuid [not null, note: '用户ID']
  "email" varchar [not null, note: '用户邮箱']
  "secret_code" varchar [not null, note: '验证密钥']
  "is_used" bool [not null, default: false, note: '是否使用']
  "created_at" timestamptz [not null, default: `now()`, note: '创建时间']
  "expired_at" timestamptz [not null, default: `(now() + '00:15:00'::interval)`, note: '到期时间']

  Note: '邮箱验证表'
}

Ref "articles_owner_fkey":"users"."id" < "articles"."owner"

Ref "articles_category_id_fkey":"categories"."id" < "articles"."category_id"

Ref "comments_article_id_fkey":"articles"."id" < "comments"."article_id"

Ref "comments_from_user_id_fkey":"users"."id" < "comments"."from_user_id"

Ref "comments_to_user_id_fkey":"users"."id" < "comments"."to_user_id"

Ref "tags_article_id_fkey":"articles"."id" < "tags"."article_id"

Ref "sessions_user_id_fkey":"users"."id" < "sessions"."user_id"

Ref "verify_emails_user_id_fkey":"users"."id" < "verify_emails"."user_id"
